--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.3.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.8"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.8",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
