--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
-    "firebase-admin": "^13.2.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-frameworks": "^0.4.2",
+    "firebase-functions": "^4.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "postcss": "^8.5.3",
