--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,8 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "dev": "next dev --experimental-https --key key.pem --cert cert.pem",
+    "lint": "eslint . --ignore-pattern \"lib/**/*\"",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -15,8 +16,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-admin": "^12.0.0",
+    "@google-cloud/storage": "^6.12.0",
+    "firebase-functions": "^6.0.1",
+    "tesseract.js": "^5.1.1" 
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
