--- a/functions/package.json
+++ b/functions/package.json
@@ -9,16 +9,17 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "generate-ssl": "openssl req -x509 -newkey rsa:2048 -keyout key.pem -out cert.pem -days 365 -nodes"
   },
   "engines": {
     "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
+    "firebase-admin": "^13.2.0",
     "@google-cloud/storage": "^6.12.0",
-    "firebase-functions": "^6.0.1",
+    "firebase-functions": "^6.3.2",
     "tesseract.js": "^5.1.1" 
   },
   "devDependencies": {
