major fixes to navbar.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/app/communities/[id]/page.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/app/communities/[id]/page.tsx", "components/ui/main-navbar.jsx", "components/ui/main-navbar.jsx"],
   "exclude": ["node_modules"]
 }
