--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^6.3.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.5.0",
     "next": "15.1.7",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.0"
