--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "firebase:rules": "firebase deploy --only firestore:rules",
+    "setup:admin": "node scripts/setup-admin-user.cjs"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -22,7 +24,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.5.0",
