--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.5.0",
     "next": "15.1.7",
+    "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -42,6 +43,7 @@
     "@eslint/eslintrc": "^3",
     "@types/date-fns": "^2.5.3",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
