--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,8 @@
     "@google-cloud/storage": "^6.12.0",
     "firebase-functions": "^6.0.1",
 
-    "tesseract.js": "^5.1.1" 
+    "tesseract.js": "^5.1.1" ,
+    "pdf2pic": "^3.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
