--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-
     "firebase:rules": "firebase deploy --only firestore:rules",
     "setup:admin": "node scripts/setup-admin-user.cjs"
-
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -27,13 +25,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
-
     "firebase-admin": "^12.7.0",
-
     "firebase-functions": "^6.3.2",
     "lucide-react": "^0.475.0",
     "motion": "^12.5.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
