--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "firebase:rules": "firebase deploy --only firestore:rules",
-    "setup:admin": "node scripts/setup-admin-user.cjs"
+    "setup:admin": "node scripts/setup-admin-user.cjs",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -46,7 +48,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/date-fns": "^2.5.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
@@ -57,6 +63,8 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-import": "^2.31.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
